--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,25 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Visual Studio Code # 
+.vscode/
+**/.vscode/
+**/.vscode/*
+**/.vscode/**
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
-/build
+build
+lib
 
 # misc
 .DS_Store
@@ -37,3 +43,5 @@ next-env.d.ts
 
 # turbo
 .turbo
+.gitignore
+.vscode/settings.json
