--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "non-monorepo",
+  "name": "myplop-repo",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "build": "turbo build",
+    "build:npm": "turbo build:npm",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "lint:fix": "turbo lint:fix",
+    "format": "turbo format",
+    "clean": "turbo clean",
+    "npm:prepack": "turbo npm:prepack",
+    "npm:postpack": "turbo npm:postpack",
+    "npm:publish": "turbo npm:publish",
+    "preinstall": "husky install",
+    "pre": "turbo pre",
+    "pre:husky": "git add . && npx lint-staged"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "turbo": "latest",
-    "typescript": "^5.3.2"
+    "@changesets/cli": "^2.27.1",
+    "@types/node": "^20.11.5",
+    "commitsmile": "^0.4.0",
+    "globals": "^13.24.0",
+    "husky": "^8.0.3",
+    "js-yaml": "^4.1.0",
+    "lint-staged": "^15.2.0",
+    "prettierrc": "workspace:*",
+    "turbo": "latest"
   },
   "engines": {
     "node": ">=18"
