--- a/turbo.json
+++ b/turbo.json
@@ -1,10 +1,20 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
-    "build": {
-      "outputs": [".next/**", "!.next/cache/**"]
-    },
+    "pre": {},
+    "build": {},
+    "preCommit": {},
+    "build:npm": {},
     "lint": {},
+    "lint:fix": {},
+    "link-cli": {},
+    "link-cli:dev": {},
+    "unlink-cli": {},
+    "unlink-cli:dev": {},
+    "format": {},
+    "npm:prepack": {},
+    "npm:postpack": {},
+    "npm:publish": {},
     "dev": {
       "cache": false,
       "persistent": true
