--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,5 @@ jobs:
         uses: pnpm/action-setup@v2.4.0
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
-      - name: Lint
-        run: pnpm lint
-      - name: Format
-        run: pnpm format
+      - name: Lint-staging every workspaces
+        run: pnpm pre:husky
