🐛 Fix(Configs,myplop): config issues and lint/format errors in myplop
add to eslint ignore file (prerttier file config at myplop), repair errors of lint and format at myplop, webpack config error in dev and build (prod)

--- a/config/prettierrc/.prettierrc.json
+++ b/config/prettierrc/.prettierrc.json
@@ -3,7 +3,7 @@
 	"bracketSameLine": true,
 	"bracketSpacing": true,
 	"cursorOffset": -1,
-	"plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-packagejson"],
+	"plugins": ["prettier-plugin-packagejson"],
 	"printWidth": 120,
 	"proseWrap": "always",
 	"tabWidth": 2,
