--- a/packages/myplop/clean-package.config.json
+++ b/packages/myplop/clean-package.config.json
@@ -2,6 +2,7 @@
 	"indent": 4,
 	"remove": ["devDependencies", "dependencies", "lint-staged", "bin"],
 	"replace": {
+		"main": "index.cjs",
 		"scripts": {
 			"npm:postpack": "clean-package restore"
 		},
