🎉 Feat(create-myplop-config): add new command `version`, function `packageManager`

--- a/packages/create-myplop-config/package.json
+++ b/packages/create-myplop-config/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"bin": {
 		"create-myplop-configBUILD": "./dist/index.cjs",
-		"create-myplop-configDIV": "./lib/index.cjs"
+		"create-myplop-configDEV": "./lib/index.cjs"
 	},
 	"scripts": {
 		"build": "webpack --config ./config/webpack/webpack.prod.js",
