⚙️  Chore(enviroment): change CI/CD Github Actions, scripts at packages and husky flow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,20 @@
-name: CI
-
+name: CI/CD
 on:
   push:
     branches: [main]
   pull_request:
-    types: [opened, synchronize]
-
+    branches: [main]
 jobs:
-  Continuous-Integration:
+  Deploy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 20
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2.4.0
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-      - name: Format Files
+      - name: 🟢 Setup
+        uses: ./.github/common-actions/install
+      - name: 📝 Lint
+        run: pnpm lint
+      - name: ♻️ Format
         run: pnpm format
-      - name: Linting Files
-        run: pnpm lint:fix --force && pnpm lint --force
-        env:
-          ESLINT_USE_FLAT_CONFIG: ${{ secrets.ESLINT_USE_FLAT_CONFIG }}
-      - name: Building Files
-        run: pnpm build
-      - name: Start Files
-        run: pnpm start
+      - name: 🏗️ Build Package
+        run: pnpm build:npm
