⚙️  Chore(enviroment): update packages and rename `pipeline`=>`tasks` in `turbo.json` like in new versions

--- a/turbo.json
+++ b/turbo.json
@@ -1,10 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "pipeline": {
+  "tasks": {
     "pre": {},
     "build": {},
-    "preCommit": {},
-    "build:npm": {},
+    "build:npm": {
+      "inputs": ["*", "!dist"]
+    },
     "lint": {},
     "lint:fix": {},
     "link-cli": {},
@@ -14,7 +15,7 @@
     "format": {},
     "npm:prepack": {},
     "npm:postpack": {},
-    "npm:publish": {},
+    "prepublishOnly": {},
     "dev": {
       "cache": false,
       "persistent": true
