--- a/packages/myplop/package.json
+++ b/packages/myplop/package.json
@@ -32,8 +32,12 @@
 			"pnpm lint --"
 		]
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@clack/prompts": "^0.7.0",
+		"chalk": "^5.3.0",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
 		"bundle-declarations-webpack-plugin": "^5.0.0",
 		"clean-package": "^2.2.0",
 		"commander": "^11.1.0",
@@ -47,7 +51,6 @@
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-merge": "^5.10.0",
-		"webpackrc": "workspace:*",
-		"zod": "^3.22.4"
+		"webpackrc": "workspace:*"
 	}
 }
