--- a/packages/myplop/package.json
+++ b/packages/myplop/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "myplop",
 	"version": "0.0.0",
-	"private": false,
+	"private": true,
 	"type": "module",
 	"main": "src/index.ts",
 	"bin": {
