--- a/config/webpackrc/package.json
+++ b/config/webpackrc/package.json
@@ -3,13 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "dev": "echo 'Add dev script here'",
-    "build": "echo 'Add build script here'",
-    "test": "echo 'Add test script here'",
-    "lint": "echo 'Add lint script here'",
-    "pre": "echo 'lololo'"
-  },
+  "scripts": {},
   "devDependencies": {
     "webpack-merge": "^5.10.0",
     "copy-webpack-plugin": "^12.0.1",
