--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,11 @@ out/
 
 # production
 build
+**/build/**
 dist
 **/dist/**
 lib
+**/lib/**
 
 # misc
 .DS_Store
@@ -47,3 +49,4 @@ next-env.d.ts
 .turbo
 .gitignore
 .vscode/settings.json
+packages/myplop/dist/index.cjs
