--- a/packages/myplop/package.json
+++ b/packages/myplop/package.json
@@ -9,9 +9,9 @@
 		"myplopPROD": "./dist/index.cjs"
 	},
 	"scripts": {
-		"build": "webpack --config ./config/webpack/webpack.prod.js",
-		"build:npm": "pnpm npm:prepack && webpack --config ./config/webpack/webpack.prod.js && pnpm npm:postpack ",
-		"dev": "webpack --config ./config/webpack/webpack.dev.js",
+		"build": "pnpm tsup --config ./config/tsuprc/tsup.prod.ts",
+		"build:npm": "pnpm npm:prepack && pnpm tsup --config ./config/tsuprc/tsup.prod.ts && pnpm dts-bundle-generator --config ./config/dts-bundle-generator/dts-bundle-generator.cjs && pnpm npm:postpack",
+		"dev": "pnpm tsup --config ./config/tsuprc/tsup.dev.ts",
 		"format": "pnpm prettier . --write && pnpm prettier . --check",
 		"link-cli": "pnpm unlink --global && pnpm link --global",
 		"link-cli:dev": "cd lib && pnpm unlink --global && pnpm link --global",
@@ -38,19 +38,15 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"bundle-declarations-webpack-plugin": "^5.0.0",
 		"clean-package": "^2.2.0",
 		"commander": "^11.1.0",
-		"copy-webpack-plugin": "^12.0.2",
+		"esbuild": "^0.21.5",
+		"esbuild-plugin-copy": "^2.1.1",
 		"eslintrc": "workspace:*",
 		"prettier": "^3.1.1",
 		"prettierrc": "workspace:*",
-		"swc-loader": "^0.2.3",
 		"tsconfig": "workspace:*",
-		"typescript": "^5.3.3",
-		"webpack": "^5.89.0",
-		"webpack-cli": "^5.1.4",
-		"webpack-merge": "^5.10.0",
-		"webpackrc": "workspace:*"
+		"tsup": "^8.1.0",
+		"typescript": "^5.3.3"
 	}
 }
