--- a/packages/myplop/package.json
+++ b/packages/myplop/package.json
@@ -36,6 +36,7 @@
 		"@clack/prompts": "^0.7.0",
 		"chalk": "^5.3.0",
 		"commander": "^11.1.0",
+		"oh-my-error": "^1.0.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
